@@ -8,6 +8,7 @@ Additional features enabled if you are running Proj6+ and PostgreSQL 12
   - #4492, Fix ST_Simplify ignoring the value of the 3rd parameter (Raúl Marín)
   - #4494, Fix ST_Simplify output having an outdated bbox (Raúl Marín)
   - #4493, Fix ST_RemoveRepeatedPoints output having an outdated bbox (Raúl Marín)
+  - #4495, Fix ST_SnapToGrid output having an outdated bbox (Raúl Marín)
 
 PostGIS 3.0.0alpha4
 2019/08/10
